# wudi

./: .dockerignore  Dockerfile  GITOPS-GUIDE.md  Makefile  README.md  TROUBLESHOOTING.md  config.py  main.py  middleware.py  pyproject.toml  requirements.txt  test-docker.sh  test_main.py
.tekton/: WORKSPACE-STORAGE-GUIDE.md  pipeline.yaml  pipelinerun.yaml  pvc.yaml  serviceaccount.yaml
.tekton/tasks/: git-clone.yaml  kaniko-build.yaml
templates/: base.html  index.html
